break up large dashboard.js

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -245,6 +245,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/static/js/dashboard.js"></script>
+    <script type="module" src="/static/js/dashboard.js"></script>
+    <script type="module" src="{{ url_for('static', filename='js/api.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/ui-form-handlers.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/ui-people-list.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/ui-person-details.js') }}"></script>
+
 </body>
 </html>
