--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -151,13 +151,13 @@
                             <div class="profile-name-container">
                                 <h3 id="profile-name"></h3>
                                 <div id="profile-id" class="person-id" style="display: none;"></div>
+                                <!-- The profile-id-container will be created dynamically -->
                             </div>
                             <div>
                                 <button class="btn btn-outline-primary me-2" id="edit-person-btn">Edit</button>
                                 <button class="btn btn-outline-danger" id="delete-person-btn">Delete</button>
                             </div>
                         </div>
-                        
                         <div id="profile-view">
                             <!-- Basic Information -->
                             <div id="basic-info-section">
